tests/syntax/error_bad_return_for.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g error_bad_return_for.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: error_bad_return_for.silly:9:5: error: RETURN is not currently allowed in a FOR loop body
// CHECK:     9 |     RETURN 0;
// CHECK:       |     ^

FOR (INT32 i : (0, 10))
{
    RETURN 0;
};
